--- a/index.html
+++ b/index.html
@@ -94,11 +94,15 @@
         <section class="acceso">
             <form class="acceso__formulario">
                 <h2 class="acceso__titulo">Iniciar sesión:</h2>
-                <label class="acceso__etiqueta">Usurario:</label>
-                <input type="text" class="acceso__campo acceso__campo--texto">
-                <label class="acceso__etiqueta">Contraseña:</label>
-                <input type="password" class="acceso__campo acceso__campo--clave">
-                <input type="submit" value="Ingresar" class="acceso__boton">
+                <div class="acceso__usuario">
+                    <label class="acceso__etiqueta">Usurario:</label>
+                    <input type="text" class="acceso__campo acceso__campo--texto">
+                </div>
+                <div class="acceso__contraseña">
+                    <label class="acceso__etiqueta">Contraseña:</label>
+                    <input type="password" class="acceso__campo acceso__campo--clave">
+                </div>
+                <button type="submit" class="boton-ingresar">Ingresar</button>
             </form>
         </section>
 
