--- a/ventanas/carrito.html
+++ b/ventanas/carrito.html
@@ -29,24 +29,21 @@
                                 <a class="nav-link navegacion-principal__enlace" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace" 
-                                    href="./informacion.html">Información de nosotros</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./informacion.html">Información
+                                    de nosotros</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace"
-                                    href="./catalogo.html">Catálogo</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./catalogo.html">Catálogo</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
                                 <a class="nav-link navegacion-principal__enlace active" aria-current="page"
                                     href="./carrito.html">Carrito</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace"
-                                    href="./recetas.html">Recetas</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./recetas.html">Recetas</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace"
-                                    href="./contacto.html">Contacto</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./contacto.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
@@ -77,6 +74,12 @@
                 <div class="tabla2"></div>
                 <div class="tabla2"></div>
             </article>
+        </section>
+
+        <section class="envios">
+            <form class="envios__formulario">
+                
+            </form>
         </section>
 
         <!-- Botón flotante de WhatsApp -->
