Actualizacion de SASS y CSS

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!-- ===== CONTENIDO PRINCIPAL ===== -->
     <main class="principal">
-        
+
         <!-- Carrusel de imágenes destacado -->
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -150,8 +150,8 @@
                 <img src="./assets/facebook.png" alt="Logo Facebook" class="redes__icono">
                 <a href="https://www.facebook.com/juan.fran.334" target="_blank" style="text-decoration: none;"
                     class="redes__link">Facebook</a>
-            </li class="redes__item">
-            <li>
+            </li>
+            <li class="redes__item">
                 <img src="./assets/linkedin.png" alt="Logo Linkedin" class="redes__icono">
                 <a href="https://www.linkedin.com/in/juanfram-networking/" target="_blank"
                     style="text-decoration: none;" class="redes__link">Linkedin</a>
