--- a/ventanas/recetas.html
+++ b/ventanas/recetas.html
@@ -29,24 +29,21 @@
                                 <a class="nav-link navegacion-principal__enlace" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace" 
-                                    href="./informacion.html">Información de nosotros</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./informacion.html">Información
+                                    de nosotros</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace"
-                                    href="./catalogo.html">Catálogo</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./catalogo.html">Catálogo</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace" 
-                                    href="./carrito.html">Carrito</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./carrito.html">Carrito</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
                                 <a class="nav-link navegacion-principal__enlace active" aria-current="page"
                                     href="./recetas.html">Recetas</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace"
-                                    href="./contacto.html">Contacto</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./contacto.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
@@ -131,7 +128,7 @@
 
             <img src="../assets/Arroz con pollo.jpg" alt="Imagen de arroz con pollo" class="receta__imagen">
 
-            <div>
+            <div class="preparacion">
                 <h3 class="receta__titulo receta__titulo2">👩‍🍳 Preparación</h3>
                 <ol class="receta__preparacion">
                     <li class="receta__pasos">En una olla grande, calentá el aceite y dorá el pollo cortado en cubos.
@@ -209,7 +206,7 @@
                 alt="Imagen de Fideos con salsa cremosa de pollo y verduras" class="receta__imagen">
 
 
-            <div>
+            <div class="preparacion">
                 <h3 class="receta__titulo receta__titulo2">👩‍🍳 Preparación</h3>
                 <ol class="receta__preparacion">
                     <li class="receta__pasos">Herví los fideos en abundante agua con sal hasta que estén al dente.
@@ -245,8 +242,8 @@
                 <img src="../assets/facebook.png" alt="Logo Facebook" class="redes__icono">
                 <a href="https://www.facebook.com/juan.fran.334" target="_blank" style="text-decoration: none;"
                     class="redes__link">Facebook</a>
-            </li class="redes__item">
-            <li>
+            </li>
+            <li class="redes__item">
                 <img src="../assets/linkedin.png" alt="Logo Linkedin" class="redes__icono">
                 <a href="https://www.linkedin.com/in/juanfram-networking/" target="_blank"
                     style="text-decoration: none;" class="redes__link">Linkedin</a>
