Actualizacion de SASS y CSS

--- a/ventanas/catalogo.html
+++ b/ventanas/catalogo.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,24 +30,21 @@
                                 <a class="nav-link navegacion-principal__enlace" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace" 
-                                    href="./informacion.html">Información de nosotros</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./informacion.html">Información
+                                    de nosotros</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
                                 <a class="nav-link navegacion-principal__enlace active" aria-current="page"
                                     href="./catalogo.html">Catálogo</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace"
-                                    href="./carrito.html">Carrito</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./carrito.html">Carrito</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace"
-                                    href="./recetas.html">Recetas</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./recetas.html">Recetas</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace"
-                                    href="./contacto.html">Contacto</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./contacto.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
@@ -61,10 +59,10 @@
 
         <!-- ============ SECCIÓN LÁCTEOS ============ -->
         <section class="listado-productos">
-            <h3 class="listado-productos__categoria">Lácteos</h3>
+            <h3 data-aos="zoom-out" class="listado-productos__categoria">Lácteos</h3>
             <div class="listado-productos__grid" id="caja1">
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Leche "La Serenísima" x 1 Litro Entera
                     </h3>
@@ -75,7 +73,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Yogur batido Ser PRO+ con proteínas sabor frutos rojos 175 g
                     </h3>
@@ -89,7 +87,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Yogur bebible frutilla La Serenísima clásico 900 g
                     </h3>
@@ -103,7 +101,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Queso crema Casancrem clásico 500 g
                     </h3>
@@ -117,7 +115,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Queso La Serenísima cremón light pote 280 g
                     </h3>
@@ -131,7 +129,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Queso crema La Paulina tradicional 290 g
                     </h3>
@@ -149,10 +147,10 @@
 
         <!-- ============ SECCIÓN PERFUMERÍA ============ -->
         <section class="listado-productos">
-            <h2 class="listado-productos__categoria">Perfumería</h2>
+            <h2 data-aos="zoom-out" class="listado-productos__categoria">Perfumería</h2>
             <div class="listado-productos__grid">
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Eau de parfum Mujercitas 80 cc
                     </h3>
@@ -166,7 +164,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Desodorante Rexona Active Emotion Women 150 ml
                     </h3>
@@ -180,7 +178,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Jabón de tocador Dove original multipack x3 90 g
                     </h3>
@@ -198,10 +196,10 @@
 
         <!-- ============ SECCIÓN LIMPIEZA ============ -->
         <section class="listado-productos">
-            <h2 class="listado-productos__categoria">Limpieza</h2>
+            <h2 data-aos="zoom-out" class="listado-productos__categoria">Limpieza</h2>
             <div class="listado-productos__grid">
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Lavandina clásica desinfectante Ayudín 2 L
                     </h3>
@@ -215,7 +213,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Limpiador líquido aromatizante Poett flores de primavera 1.8 L
                     </h3>
@@ -229,7 +227,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Limpiador líquido aromatizante Poett alegra tu día 1.8 L
                     </h3>
@@ -243,7 +241,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Limpiador líquido aromatizante Poett frescura de lavanda 1.8 L
                     </h3>
@@ -257,7 +255,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Jabón líquido para ropa Skip concentrado bio enzimas 500 cc
                     </h3>
@@ -271,7 +269,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Detergente Magistral ultra limón en botella 750 cc
                     </h3>
@@ -285,7 +283,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Suavizante clásico Comfort para ropa doypack 3 L
                     </h3>
@@ -299,7 +297,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Suavizante clásico Vivere para ropa doypack 3 L
                     </h3>
@@ -317,10 +315,10 @@
 
         <!-- ============ SECCIÓN ALMACÉN ============ -->
         <section class="listado-productos">
-            <h2 class="listado-productos__categoria">Almacén</h2>
+            <h2 data-aos="zoom-out" class="listado-productos__categoria">Almacén</h2>
             <div class="listado-productos__grid">
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Huevos blancos El Mercado (maple plástico) 12 uni
                     </h3>
@@ -334,7 +332,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Pan de papa para hamburguesa Bimbo Artesano (4 uni)
                     </h3>
@@ -348,7 +346,7 @@
                     <input class="producto__boton-comprar" type="submit" value="Comprar">
                 </article>
 
-                <article class="producto">
+                <article data-aos="zoom-out" class="producto">
                     <h3 class="producto__nombre">
                         Yerba mate Playadito suave con palo 1 kg
                     </h3>
@@ -406,6 +404,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
