--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./estilos/estilos.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -108,19 +109,19 @@
 
         <!--Descripción del Supermercado-->
         <section class="descripcion-tienda" id="Descripción">
-            <h3 class="descripcion-tienda__titulo">Descripción</h3>
-            <p class="descripcion-tienda__parrafo"><strong>Click&Shop</strong> es tu supermercado online moderno,
+            <h3 data-aos="fade-up-left" class="descripcion-tienda__titulo">Descripción</h3>
+            <p data-aos="fade-up-right" class="descripcion-tienda__parrafo"><strong>Click&Shop</strong> es tu supermercado online moderno,
                 práctico y confiable. Nuestra misión es
                 que hacer las compras sea una experiencia rápida, cómoda y sencilla, sin moverte de tu casa.</p>
-            <p class="descripcion-tienda__parrafo">Con solo unos clics, podés acceder a una amplia variedad de
+            <p data-aos="fade-up-left" class="descripcion-tienda__parrafo">Con solo unos clics, podés acceder a una amplia variedad de
                 productos: alimentos frescos, bebidas,
                 limpieza, perfumería, artículos de hogar y mucho más. Todo al mejor precio y con la garantía de recibir
                 tu pedido directamente en la puerta de tu casa.</p>
-            <p class="descripcion-tienda__parrafo">💜 En <strong>Click&Shop</strong> combinamos tecnología, calidad y
+            <p data-aos="fade-up-right" class="descripcion-tienda__parrafo">💜 En <strong>Click&Shop</strong> combinamos tecnología, calidad y
                 cercanía para transformar la forma en
                 que hacés tus compras. Nuestra plataforma está diseñada para que disfrutes de un proceso simple, seguro
                 y rápido, con promociones exclusivas y entregas a tiempo.</p>
-            <p class="descripcion-tienda__parrafo">👉 Porque tu tiempo vale, nosotros lo cuidamos.
+            <p data-aos="fade-up-left" class="descripcion-tienda__parrafo">👉 Porque tu tiempo vale, nosotros lo cuidamos.
                 <strong>Click&Shop</strong>: elegí, clickeá y recibí.
             </p>
         </section>
@@ -163,6 +164,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
