--- a/ventanas/contacto.html
+++ b/ventanas/contacto.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -91,7 +92,7 @@
 
         <!-- Info ubicación / horario / mapa / video -->
         <section class="info-local">
-            <div class="info-local__mapa">
+            <div data-aos="zoom-out-left" class="info-local__mapa">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52990.72059106094!2d-60.60268105408957!3d-33.891713182217046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b84aad3ef60a31%3A0x481ac3277962e9c5!2sPergamino%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1758831870890!5m2!1ses-419!2sar"
                     width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
@@ -100,18 +101,18 @@
             </div>
 
             <div class="info-local__detalles">
-                <p class="info-local__dato">📍 Pergamino, Buenos Aires</p>
-                <p class="info-local__dato">🕐 Lunes a sábado de 9 a 18 hs</p>
+                <p data-aos="zoom-out-right" class="info-local__dato">📍 Pergamino, Buenos Aires</p>
+                <p data-aos="zoom-out-left" class="info-local__dato">🕐 Lunes a sábado de 9 a 18 hs</p>
             </div>
 
             <div class="info-local__video">
-                <div class="video-container">
+                <div data-aos="zoom-out-right" class="video-container">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/rnacVSVN47A?si=NXjaxK2xmsV2PzPn"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
-                <div class="video-container">
+                <div data-aos="zoom-out-left" class="video-container">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/NONVl_7D_PQ?si=aq_bhfRx4suTSna2"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -119,7 +120,7 @@
                 </div>
             </div>
 
-            <p class="info-local__frase">
+            <p data-aos="zoom-out-right" class="info-local__frase">
                 💜 En Click&Shop, tu compra es tan fácil como un clic.
             </p>
         </section>
@@ -164,6 +165,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
