Actualización de Metas

--- a/ventanas/carrito.html
+++ b/ventanas/carrito.html
@@ -9,6 +9,13 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- ===== Search Engine Optimization ===== -->
+    <meta name="description"
+        content="Revisá tu carrito de compras en Click&Shop. Confirmá cantidades, precios y productos antes de finalizar tu compra online de manera rápida y segura.">
+    <meta name="keywords"
+        content="carrito de compras, revisar pedido, editar cantidades, productos seleccionados, confirmar compra, supermercado online, Click&Shop, compras online, Pergamino, entrega a domicilio">
+
 </head>
 
 <body>
