--- a/ventanas/catalogo.html
+++ b/ventanas/catalogo.html
@@ -9,6 +9,13 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- ===== Search Engine Optimization ===== -->
+    <meta name="description"
+        content="Explorá el catálogo de Click&Shop y encontrá alimentos, bebidas, limpieza, perfumería y artículos para el hogar. Comprá online fácil, rápido y al mejor precio.">
+    <meta name="keywords"
+        content="catálogo, supermercado online, productos, alimentos, bebidas, limpieza, perfumería, hogar, ofertas, compras online, Click&Shop, Pergamino, entrega a domicilio">
+
 </head>
 
 <body>
