--- a/ventanas/contacto.html
+++ b/ventanas/contacto.html
@@ -9,6 +9,13 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- ===== Search Engine Optimization ===== -->
+    <meta name="description"
+        content="Ponete en contacto con Click&Shop para consultas, pedidos o ayuda con tus compras online. Respondemos rápido y brindamos atención personalizada.">
+    <meta name="keywords"
+        content="contacto Click&Shop, contacto supermercado online, consultas, atención al cliente, soporte compras online, Pergamino, formulario de contacto, ayuda con pedidos, envíos a domicilio">
+
 </head>
 
 <body>
