--- a/ventanas/recetas.html
+++ b/ventanas/recetas.html
@@ -9,6 +9,13 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- ===== Search Engine Optimization ===== -->
+    <meta name="description"
+        content="Explorá nuestra selección de recetas fáciles y económicas usando ingredientes disponibles en Click&Shop. Ideas rápidas para cocinar arroz, pastas, pollo, verduras y mucho más.">
+    <meta name="keywords"
+        content="recetas, recetas fáciles, recetas económicas, ideas de cocina, arroz con pollo, fideos con salsa, ingredientes Click&Shop, cocinar en casa, recetas rápidas, recetas con pollo, recetas con fideos">
+
 </head>
 
 <body>
@@ -68,7 +75,7 @@
             </a>
         </section>
 
-        <section class="receta">
+        <section data-aos="fade-up-left" class="receta">
             <h3 class="receta__titulo">Primera receta: Arroz con pollo</h3>
             <div class="receta__tabla">
                 <div class="receta__fila receta__fila--encabezado">
@@ -149,7 +156,7 @@
             </div>
         </section>
 
-        <section class="receta">
+        <section data-aos="fade-up-right" class="receta">
             <h3 class="receta__titulo">Segunda receta: Fideos con salsa cremosa de pollo y verduras</h3>
             <div class="receta__tabla">
                 <div class="receta__fila receta__fila--encabezado">
