--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./estilos/estilos.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- ===== Search Engine Optimization ===== -->
+    <meta name="description"
+        content="Click&Shop, el supermercado online que cuida tu tiempo. Descubrí ofertas, productos variados y entregas rápidas en Pergamino. Comprar nunca fue tan simple.">
+    <meta name="keywords" content="Supermercado, compras online, tienda online, delivery de alimentos, supermercado virtual, compras a domicilio, productos frescos, supermercado Pergamino ">
+    <meta name="author" content="Juan Valentin Fram">
+    <meta name="owner" content="Juan Valentin Fram">
+
+    <!-- ===== Open Graph (SEO de redes sociales) ===== -->
+    <meta property="og:title" content="Click&Shop">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Juan-Valentin-Fram/Proyecto-Supermercado/refs/heads/main/assets/Logo.png">
+    <meta property="og:url" content="https://juan-valentin-fram.github.io/Proyecto-Supermercado/">
+    <meta property="og:type" content="Supermecado Online">
+    <meta property="og:description" content="Click&Shop, el supermercado online que cuida tu tiempo. Descubrí ofertas, productos variados y entregas rápidas en Pergamino. Comprar nunca fue tan simple.">
+
 </head>
 
 <body>
@@ -65,15 +80,15 @@
             <div class="carousel-inner">
 
                 <div class="carousel-item active">
-                    <img src="./assets/Imagen Carrusel 2.png" class="d-block w-100" alt="destacado__imagen">
+                    <img src="./assets/Imagen Carrusel 2.png" class="d-block w-100" alt="Imagen del carrousel con descuentos">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="./assets/Imagen Carrusel 3.png" class="d-block w-100" alt="destacado__imagen">
+                    <img src="./assets/Imagen Carrusel 3.png" class="d-block w-100" alt="Imagen del carrousel promocionando cafe nuevo">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="./assets/Imagen Carrusel 1.png" class="d-block w-100" alt="destacado__imagen">
+                    <img src="./assets/Imagen Carrusel 1.png" class="d-block w-100" alt="Imagen del carrousel con descuentos">
                 </div>
 
             </div>
@@ -110,18 +125,22 @@
         <!--Descripción del Supermercado-->
         <section class="descripcion-tienda" id="Descripción">
             <h3 data-aos="fade-up-left" class="descripcion-tienda__titulo">Descripción</h3>
-            <p data-aos="fade-up-right" class="descripcion-tienda__parrafo"><strong>Click&Shop</strong> es tu supermercado online moderno,
+            <p data-aos="fade-up-right" class="descripcion-tienda__parrafo"><strong>Click&Shop</strong> es tu
+                supermercado online moderno,
                 práctico y confiable. Nuestra misión es
                 que hacer las compras sea una experiencia rápida, cómoda y sencilla, sin moverte de tu casa.</p>
-            <p data-aos="fade-up-left" class="descripcion-tienda__parrafo">Con solo unos clics, podés acceder a una amplia variedad de
+            <p data-aos="fade-up-left" class="descripcion-tienda__parrafo">Con solo unos clics, podés acceder a una
+                amplia variedad de
                 productos: alimentos frescos, bebidas,
                 limpieza, perfumería, artículos de hogar y mucho más. Todo al mejor precio y con la garantía de recibir
                 tu pedido directamente en la puerta de tu casa.</p>
-            <p data-aos="fade-up-right" class="descripcion-tienda__parrafo">💜 En <strong>Click&Shop</strong> combinamos tecnología, calidad y
+            <p data-aos="fade-up-right" class="descripcion-tienda__parrafo">💜 En <strong>Click&Shop</strong> combinamos
+                tecnología, calidad y
                 cercanía para transformar la forma en
                 que hacés tus compras. Nuestra plataforma está diseñada para que disfrutes de un proceso simple, seguro
                 y rápido, con promociones exclusivas y entregas a tiempo.</p>
-            <p data-aos="fade-up-left" class="descripcion-tienda__parrafo">👉 Porque tu tiempo vale, nosotros lo cuidamos.
+            <p data-aos="fade-up-left" class="descripcion-tienda__parrafo">👉 Porque tu tiempo vale, nosotros lo
+                cuidamos.
                 <strong>Click&Shop</strong>: elegí, clickeá y recibí.
             </p>
         </section>
