--- a/ventanas/informacion.html
+++ b/ventanas/informacion.html
@@ -9,6 +9,13 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- ===== Search Engine Optimization ===== -->
+    <meta name="description"
+        content="Conocé más sobre Click&Shop: quiénes somos, nuestra misión y cómo trabajamos para ofrecerte un supermercado online rápido, seguro y conveniente.">
+    <meta name="keywords"
+        content="Click&Shop, información, quiénes somos, supermercado online, misión, valores, Pergamino, entregas a domicilio, compras online seguras, calidad en productos, atención personalizada">
+
 </head>
 
 <body>
@@ -57,8 +64,10 @@
 
         <!--Información del Supermercado-->
         <Section class="informacion-tienda">
-            <h3 data-aos="fade-up-left" class="informacion-tienda__titulo"> <strong>🌟 Información Sobre Nosotros - Click&Shop</strong></h3>
-            <p data-aos="fade-up-right" class="informacion-tienda__parrafo">Detrás de <strong>Click&Shop</strong> hay una historia personal y un
+            <h3 data-aos="fade-up-left" class="informacion-tienda__titulo"> <strong>🌟 Información Sobre Nosotros -
+                    Click&Shop</strong></h3>
+            <p data-aos="fade-up-right" class="informacion-tienda__parrafo">Detrás de <strong>Click&Shop</strong> hay
+                una historia personal y un
                 sueño que fue
                 tomando forma con el tiempo. Mi nombre es
                 Juan Fram y siempre me apasionó la idea de emprender proyectos que sumen valor real a la vida de las
@@ -66,31 +75,36 @@
                 terminan siendo una tarea pesada, que nos quita tiempo y energía que podríamos dedicar a lo que
                 realmente
                 nos hace felices: estar con nuestra familia, compartir con amigos o simplemente descansar.</p>
-            <p data-aos="fade-up-left" class="informacion-tienda__parrafo">Fue entonces cuando decidí dar un paso adelante y crear un espacio
+            <p data-aos="fade-up-left" class="informacion-tienda__parrafo">Fue entonces cuando decidí dar un paso
+                adelante y crear un espacio
                 diferente: un supermercado online pensado
                 para simplificar la vida cotidiana. Así nació <strong>Click&Shop</strong>, con el propósito de
                 transformar una obligación
                 en
                 una experiencia positiva, rápida y agradable.</p>
-            <p data-aos="fade-up-right" class="informacion-tienda__parrafo">Pero <strong>Click&Shop</strong> no es solo una tienda virtual: es un
+            <p data-aos="fade-up-right" class="informacion-tienda__parrafo">Pero <strong>Click&Shop</strong> no es solo
+                una tienda virtual: es un
                 proyecto
                 construido desde el corazón, con la convicción
                 de que hacer las cosas más fáciles también es una forma de dar felicidad. Cada producto que ofrecemos,
                 cada
                 entrega que organizamos, está pensada para que la gente no solo reciba lo que necesita, sino que también
                 sienta que su tiempo y su bienestar son valorados.</p>
-            <p data-aos="fade-up-left" class="informacion-tienda__parrafo">Nuestro compromiso es combinar tecnología, calidad y cercanía humana.
+            <p data-aos="fade-up-left" class="informacion-tienda__parrafo">Nuestro compromiso es combinar tecnología,
+                calidad y cercanía humana.
                 Queremos que cada cliente pueda acceder
                 a una amplia variedad de productos, con precios justos y promociones exclusivas, pero además que viva
                 una
                 experiencia de compra segura, confiable y simple. Porque creemos que la confianza se gana con hechos:
                 entregando a tiempo, cumpliendo con lo prometido y cuidando cada detalle.</p>
-            <p data-aos="fade-up-right" class="informacion-tienda__parrafo">En <strong>Click&Shop</strong> nos mueve un sueño: que cada pedido
+            <p data-aos="fade-up-right" class="informacion-tienda__parrafo">En <strong>Click&Shop</strong> nos mueve un
+                sueño: que cada pedido
                 llegue acompañado
                 de la satisfacción de haber elegido un
                 servicio que facilita la vida. Nuestra meta es estar presentes en esos pequeños grandes momentos, siendo
                 parte del día a día de las familias y contribuyendo a que las rutinas sean más llevaderas.</p>
-            <p data-aos="fade-up-left" class="informacion-tienda__parrafo">✨ <strong>Click&Shop</strong>: porque comprar puede ser fácil,
+            <p data-aos="fade-up-left" class="informacion-tienda__parrafo">✨ <strong>Click&Shop</strong>: porque comprar
+                puede ser fácil,
                 rápido… y también una
                 experiencia que regala sonrisas.</p>
         </section>
