Actualización de Metas

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta property="og:title" content="Click&Shop">
     <meta property="og:image" content="https://raw.githubusercontent.com/Juan-Valentin-Fram/Proyecto-Supermercado/refs/heads/main/assets/Logo.png">
     <meta property="og:url" content="https://juan-valentin-fram.github.io/Proyecto-Supermercado/">
+    <meta property="og:url" content="https://supermercadoonlinejuanfram.netlify.app/">
     <meta property="og:type" content="Supermecado Online">
     <meta property="og:description" content="Click&Shop, el supermercado online que cuida tu tiempo. Descubrí ofertas, productos variados y entregas rápidas en Pergamino. Comprar nunca fue tan simple.">
 
