Actualización de Headers

--- a/ventanas/carrito.html
+++ b/ventanas/carrito.html
@@ -62,12 +62,14 @@
 
     <!-- ===== CONTENIDO PRINCIPAL ===== -->
     <main class="principal">
+
+        <h1>Lo que necesitás, sin vueltas.</h1>
         <!--Productos en el carrito-->
         <section>
             <article class="compras">
-                <h3 class="compras__titulo">
+                <h2 class="compras__titulo">
                     Productos en el carrito
-                </h3>
+                </h2>
                 <p class="compras__parrafo"></p>
             </article>
 
