--- a/ventanas/contacto.html
+++ b/ventanas/contacto.html
@@ -63,6 +63,7 @@
     <!-- ===== CONTENIDO PRINCIPAL ===== -->
     <main class="principal principal--contacto">
 
+        <h1>Contactanos y resolvemos todo.</h1>
         <!-- Bloque contacto -->
         <section class="contacto">
             <h2 class="contacto__titulo">
