--- a/ventanas/informacion.html
+++ b/ventanas/informacion.html
@@ -62,10 +62,12 @@
     <!-- ===== CONTENIDO PRINCIPAL ===== -->
     <main class="principal">
 
+        <h1>Click&Shop: fácil, rápido, tuyo.</h1>
+
         <!--Información del Supermercado-->
         <Section class="informacion-tienda">
-            <h3 data-aos="fade-up-left" class="informacion-tienda__titulo"> <strong>🌟 Información Sobre Nosotros -
-                    Click&Shop</strong></h3>
+            <h2 data-aos="fade-up-left" class="informacion-tienda__titulo"> <strong>🌟 Información Sobre Nosotros -
+                    Click&Shop</strong></h2>
             <p data-aos="fade-up-right" class="informacion-tienda__parrafo">Detrás de <strong>Click&Shop</strong> hay
                 una historia personal y un
                 sueño que fue
