--- a/ventanas/recetas.html
+++ b/ventanas/recetas.html
@@ -62,6 +62,8 @@
 
     <!-- ===== CONTENIDO PRINCIPAL ===== -->
     <main class="principal">
+
+        <h1>Tu súper online de confianza.</h1>
         <h2 class="principal__introduccion">Recetas para que pueda realizar con nuestros productos</h2>
         <!--Recetas-->
         <h3 class="principal__subtitulo">Lista de recetas</h3>
