--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
     <!-- ===== Search Engine Optimization ===== -->
     <meta name="description"
         content="Click&Shop, el supermercado online que cuida tu tiempo. Descubrí ofertas, productos variados y entregas rápidas en Pergamino. Comprar nunca fue tan simple.">
-    <meta name="keywords" content="Supermercado, compras online, tienda online, delivery de alimentos, supermercado virtual, compras a domicilio, productos frescos, supermercado Pergamino ">
+    <meta name="keywords"
+        content="Supermercado, compras online, tienda online, delivery de alimentos, supermercado virtual, compras a domicilio, productos frescos, supermercado Pergamino ">
     <meta name="author" content="Juan Valentin Fram">
     <meta name="owner" content="Juan Valentin Fram">
 
     <!-- ===== Open Graph (SEO de redes sociales) ===== -->
     <meta property="og:title" content="Click&Shop">
-    <meta property="og:image" content="https://raw.githubusercontent.com/Juan-Valentin-Fram/Proyecto-Supermercado/refs/heads/main/assets/Logo.png">
+    <meta property="og:image"
+        content="https://raw.githubusercontent.com/Juan-Valentin-Fram/Proyecto-Supermercado/refs/heads/main/assets/Logo.png">
     <meta property="og:url" content="https://juan-valentin-fram.github.io/Proyecto-Supermercado/">
     <meta property="og:url" content="https://supermercadoonlinejuanfram.netlify.app/">
     <meta property="og:type" content="Supermecado Online">
-    <meta property="og:description" content="Click&Shop, el supermercado online que cuida tu tiempo. Descubrí ofertas, productos variados y entregas rápidas en Pergamino. Comprar nunca fue tan simple.">
+    <meta property="og:description"
+        content="Click&Shop, el supermercado online que cuida tu tiempo. Descubrí ofertas, productos variados y entregas rápidas en Pergamino. Comprar nunca fue tan simple.">
 
 </head>
 
@@ -81,15 +84,18 @@
             <div class="carousel-inner">
 
                 <div class="carousel-item active">
-                    <img src="./assets/Imagen Carrusel 2.png" class="d-block w-100" alt="Imagen del carrousel con descuentos">
+                    <img src="./assets/Imagen Carrusel 2.png" class="d-block w-100"
+                        alt="Imagen del carrousel con descuentos">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="./assets/Imagen Carrusel 3.png" class="d-block w-100" alt="Imagen del carrousel promocionando cafe nuevo">
+                    <img src="./assets/Imagen Carrusel 3.png" class="d-block w-100"
+                        alt="Imagen del carrousel promocionando cafe nuevo">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="./assets/Imagen Carrusel 1.png" class="d-block w-100" alt="Imagen del carrousel con descuentos">
+                    <img src="./assets/Imagen Carrusel 1.png" class="d-block w-100"
+                        alt="Imagen del carrousel con descuentos">
                 </div>
 
             </div>
@@ -106,6 +112,7 @@
             </button>
         </div>
 
+        <h1>Tus compras, al instante.</h1>
 
         <!-- Formulario de inicio de sesión -->
         <section class="acceso">
